# The-Auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
audit/: audit_report_ahmed.md
audit/report_onself_generated/: audit_report_Beamlak Adane.md  audit_report_bnobody.md
reports/: final_report.md
src/: cli.py  graph.py  llm.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py  vision_tools.py
